Copied some files from dcpspi.
Yes, bad practice...

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ bin_PROGRAMS = dcpd
 
 html_DATA = README.html
 
-dcpd_SOURCES = dcpd.c registers.c registers.h
+dcpd_SOURCES = dcpd.c registers.c registers.h named_pipe.c named_pipe.h messages.c messages.h
 
 .md.html:
 	$(MARKDOWN) $< >$@
