--- a/configure.ac
+++ b/configure.ac
@@ -11,14 +11,17 @@ AC_CHECK_PROGS([MARKDOWN], [markdown])
 # Checks for libraries.
 
 # Checks for header files.
-AC_CHECK_HEADERS([stddef.h stdint.h stdlib.h])
+AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h syslog.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_CHECK_HEADER_STDBOOL
+AC_TYPE_SIZE_T
+AC_TYPE_SSIZE_T
 AC_TYPE_UINT16_T
 AC_TYPE_UINT8_T
 
 # Checks for library functions.
+AC_CHECK_FUNCS([mkfifo strerror])
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
