Tweaked a bit to use system extensions and silent build.

--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,11 @@
 AC_PREREQ([2.69])
 AC_INIT([T+A DCP], [0.1], [r.tiemann@ta-hifi.com])
-AM_INIT_AUTOMAKE([1.11 -Wall -Werror silent-rules foreign])
+AM_INIT_AUTOMAKE([1.11 -Wall -Werror foreign])
+AM_SILENT_RULES([yes])
 AC_CONFIG_SRCDIR([dcpd.c])
 AC_CONFIG_HEADERS([config.h])
+
+AC_USE_SYSTEM_EXTENSIONS()
 
 # Checks for programs.
 AC_PROG_CC
