Make distcheck pass.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,10 @@ bin_PROGRAMS = dcpd
 
 html_DATA = README.html
 
+EXTRA_DIST = README.md
+
+CLEANFILES = README.html
+
 dcpd_SOURCES = \
     dcpd.c registers.c registers.h named_pipe.c named_pipe.h \
     transactions.c transactions.h dcpdefs.h messages.c messages.h
