--- a/Makefile.am
+++ b/Makefile.am
@@ -8,7 +8,8 @@ CLEANFILES = README.html
 
 dcpd_SOURCES = \
     dcpd.c registers.c registers.h named_pipe.c named_pipe.h \
-    transactions.c transactions.h dcpdefs.h messages.c messages.h
+    transactions.c transactions.h dcpdefs.h messages.c messages.h \
+    dynamic_buffer.c dynamic_buffer.h
 
 .md.html:
 	$(MARKDOWN) $< >$@
