Move DRCP stuff to own drcp.[ch] files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,7 @@ CLEANFILES = README.html
 dcpd_SOURCES = \
     dcpd.c registers.c registers.h named_pipe.c named_pipe.h \
     transactions.c transactions.h dcpdefs.h messages.c messages.h \
-    dynamic_buffer.c dynamic_buffer.h
+    dynamic_buffer.c dynamic_buffer.h drcp.c drcp.h
 
 .md.html:
 	$(MARKDOWN) $< >$@
