Configure variables for compiler warnings.
The flags for strict compiler warnings should be passed in CWARNINGS
now, whereas a relaxed set for problematic code should be passed in
CRELAXEDWARNINGS. The CFLAGS are used for optimization, architecture
selection, etc. just like before.

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,6 +12,8 @@ dcpd_SOURCES = \
     dynamic_buffer.c dynamic_buffer.h drcp.c drcp.h drcp_command_codes.h \
     dcpregs_drcp.c dcpregs_drcp.h
 
+AM_CFLAGS = $(CWARNINGS)
+
 AM_CPPFLAGS = $(DCPD_DEPENDENCIES_CFLAGS)
 
 dcpd_LDADD = $(DCPD_DEPENDENCIES_LIBS)
