First D-Bus interface definitions for dcpd.
The D-Bus code is mostly generated by gdbus-codegen, part of
libglib2.0-dev. This tool generates code that may trigger some
compiler warnings, so CRELAXEDWARNINGS introduced in
215c50fe81fa82962b40e180d01946b2f9176dc9 may become handy here.

--- a/configure.ac
+++ b/configure.ac
@@ -12,9 +12,12 @@ AC_ARG_VAR([CRELAXEDWARNINGS], [options for relaxing some compiler warnings for 
 
 # Checks for programs.
 AC_PROG_CC
+AC_PROG_RANLIB
+AM_PROG_AR
 PKG_PROG_PKG_CONFIG([0.26])
 AC_CHECK_PROGS([MARKDOWN], [markdown])
 AC_CHECK_PROGS([DOXYGEN], [doxygen])
+AC_CHECK_PROGS([GDBUS_CODEGEN], [gdbus-codegen])
 
 # Checks for libraries.
 PKG_CHECK_MODULES([DCPD_DEPENDENCIES], [gmodule-2.0 gio-2.0 gio-unix-2.0 gthread-2.0])
