--- a/configure.ac
+++ b/configure.ac
@@ -9,6 +9,8 @@ AC_USE_SYSTEM_EXTENSIONS()
 
 AC_ARG_VAR([CWARNINGS], [strict set of C compiler warnings])
 AC_ARG_VAR([CRELAXEDWARNINGS], [options for relaxing some compiler warnings for various files])
+AC_ARG_VAR([DEBIAN_SYSROOT_DIR], [path to Debian system root to use when cross-building a Debian package])
+AC_ARG_VAR([DEBIAN_SYSROOT_LIBPATH], [colon-separated list of paths to search for libraries when cross-building a Debian package])
 
 # Checks for programs.
 AC_PROG_CC
@@ -18,6 +20,8 @@ PKG_PROG_PKG_CONFIG([0.26])
 AC_CHECK_PROGS([MARKDOWN], [markdown])
 AC_CHECK_PROGS([DOXYGEN], [doxygen])
 AC_CHECK_PROGS([GDBUS_CODEGEN], [gdbus-codegen])
+AC_CHECK_PROGS([DPKG_BUILDPACKAGE], [dpkg-buildpackage])
+AC_CHECK_PROGS([DPKG_ARCHITECTURE], [dpkg-architecture])
 
 # Checks for libraries.
 PKG_CHECK_MODULES([DCPD_DEPENDENCIES], [gmodule-2.0 gio-2.0 gio-unix-2.0 gthread-2.0])
@@ -38,5 +42,24 @@ AC_CHECK_TYPES([ptrdiff_t])
 AC_FUNC_REALLOC
 AC_CHECK_FUNCS([getpagesize memchr memmove memset mkfifo strerror strtoul])
 
+# Debian architecture name for debian/control.in
+AS_IF([test "x$ac_cv_prog_DPKG_ARCHITECTURE" != x],
+      [DEBIAN_ARCHITECTURE_NAME=$($ac_cv_prog_DPKG_ARCHITECTURE -qDEB_HOST_ARCH -t$host_alias)],
+      [DEBIAN_ARCHITECTURE_NAME=])
+AC_SUBST([DEBIAN_ARCHITECTURE_NAME])
+
+# arguments for dh_shlibdeps while building Debian package
+AS_IF([test "x$DEBIAN_SYSROOT_DIR" != x],
+      [DH_SHLIBDEPS_SYSROOT_ARGS="--dpkg-shlibdeps-params='--admindir=\$(DEBIAN_SYSROOT_DIR)/var/lib/dpkg --ignore-missing-info'"],
+      [DH_SHLIBDEPS_SYSROOT_ARGS="--dpkg-shlibdeps-params='--ignore-missing-info'"])
+AS_IF([test "x$DEBIAN_SYSROOT_LIBPATH" != x],
+      [DH_SHLIBDEPS_LIBPATH_ARGS="-l\$(DEBIAN_SYSROOT_LIBPATH)"],
+      [DH_SHLIBDEPS_LIBPATH_ARGS=])
+DH_SHLIBDEPS_ARGS="$DH_SHLIBDEPS_SYSROOT_ARGS $DH_SHLIBDEPS_LIBPATH_ARGS"
+AC_SUBST([DH_SHLIBDEPS_ARGS])
+
+AM_CONDITIONAL([CAN_BUILD_DEBIAN_PACKAGE], [test "x$ac_cv_prog_DPKG_BUILDPACKAGE" != x && test "x$DEBIAN_ARCHITECTURE_NAME" != x])
+
 AC_CONFIG_FILES([Makefile Doxyfile])
+AC_CONFIG_FILES([debian/control])
 AC_OUTPUT
