--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 /aclocal.m4
-/ar-lib
 /autom4te.cache/
-/compile
+/config
 /config.h.in
+/config.h.in~
 /configure
-/depcomp
-/install-sh
-/missing
+/m4
 Makefile.in
