--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,11 @@
 AC_PREREQ([2.69])
 AC_INIT([DCPD], [0.1], [r.tiemann@ta-hifi.com])
+AC_CONFIG_AUX_DIR([config])
 AM_INIT_AUTOMAKE([1.11 -Wall -Werror foreign])
 AM_SILENT_RULES([yes])
 AC_CONFIG_SRCDIR([dcpd.c])
 AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_MACRO_DIR([m4])
 
 AC_USE_SYSTEM_EXTENSIONS()
 
