--- a/configure.ac
+++ b/configure.ac
@@ -14,22 +14,43 @@ AC_ARG_VAR([CRELAXEDWARNINGS], [options for relaxing some compiler warnings for 
 AC_ARG_VAR([DEBIAN_SYSROOT_DIR], [path to Debian system root to use when cross-building a Debian package])
 AC_ARG_VAR([DEBIAN_SYSROOT_LIBPATH], [colon-separated list of paths to search for libraries when cross-building a Debian package])
 
+AC_ARG_ENABLE([valgrind],
+              [AS_HELP_STRING([--disable-valgrind],
+                              [disable an extra run of unit tests with Valgrind on ``make check''])],
+              [],
+              [enable_valgrind=yes])
+
 # Checks for programs.
+AC_PROG_AWK
 AC_PROG_CC
-AC_PROG_RANLIB
+AC_PROG_CPP
+AC_PROG_INSTALL
+AC_PROG_LN_S
+AC_PROG_MAKE_SET
 AM_PROG_AR
+AC_PROG_LIBTOOL
 PKG_PROG_PKG_CONFIG([0.26])
 AC_CHECK_PROGS([MARKDOWN], [markdown])
 AC_CHECK_PROGS([DOXYGEN], [doxygen])
 AC_CHECK_PROGS([GDBUS_CODEGEN], [gdbus-codegen])
 AC_CHECK_PROGS([DPKG_BUILDPACKAGE], [dpkg-buildpackage])
 AC_CHECK_PROGS([DPKG_ARCHITECTURE], [dpkg-architecture])
+AC_CHECK_PROGS([XSLTPROC], [xsltproc])
+AC_CHECK_PROGS([VALGRIND], [valgrind])
+AC_CHECK_CUTTER
+AC_CHECK_GCUTTER
+AC_CHECK_COVERAGE
 
 # Checks for libraries.
 PKG_CHECK_MODULES([DCPD_DEPENDENCIES], [gmodule-2.0 gio-2.0 gio-unix-2.0 gthread-2.0])
 
 # Checks for header files.
 AC_CHECK_HEADERS([fcntl.h limits.h stddef.h stdint.h stdlib.h string.h syslog.h unistd.h])
+
+save_CPPFLAGS="$CPPFLAGS"
+CPPFLAGS="$pkg_cv_CUTTER_CFLAGS"
+AC_CHECK_HEADER([cutter.h], [], [ac_cv_use_cutter=no])
+CPPFLAGS="$save_CPPFLAGS"
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_CHECK_HEADER_STDBOOL
@@ -60,8 +81,12 @@ AS_IF([test "x$DEBIAN_SYSROOT_LIBPATH" != x],
 DH_SHLIBDEPS_ARGS="$DH_SHLIBDEPS_SYSROOT_ARGS $DH_SHLIBDEPS_LIBPATH_ARGS"
 AC_SUBST([DH_SHLIBDEPS_ARGS])
 
+AM_CONDITIONAL([WITH_CUTTER], [test "x$ac_cv_use_cutter" = "xyes"])
+AM_CONDITIONAL([WITH_VALGRIND], [test "x$enable_valgrind" = "xyes"])
 AM_CONDITIONAL([CAN_BUILD_DEBIAN_PACKAGE], [test "x$ac_cv_prog_DPKG_BUILDPACKAGE" != x && test "x$DEBIAN_ARCHITECTURE_NAME" != x])
 
-AC_CONFIG_FILES([Makefile Doxyfile])
+AC_CONFIG_FILES([Makefile tests/Makefile Doxyfile])
 AC_CONFIG_FILES([debian/control])
+AC_CONFIG_FILES([tests/run_test.sh], [chmod +x tests/run_test.sh])
+AC_CONFIG_FILES([tests/valgrind.sh], [chmod +x tests/valgrind.sh])
 AC_OUTPUT
