--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,7 @@ bin_PROGRAMS = dcpd
 
 html_DATA = README.html
 
-EXTRA_DIST = README.md
+EXTRA_DIST = README.md cppcheck_suppressed.txt
 
 CLEANFILES = README.html
 
