--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -14,13 +14,20 @@ AM_CPPFLAGS += -I$(top_srcdir)
 
 AM_CFLAGS = $(CWARNINGS)
 
+AM_CXXFLAGS = $(CXXWARNINGS)
+
 LIBS += $(CUTTER_LIBS)
 
-check_LTLIBRARIES = test_dynamic_buffer.la
+check_LTLIBRARIES = test_dynamic_buffer.la test_registers.la
 
 test_dynamic_buffer_la_SOURCES = test_dynamic_buffer.c
 test_dynamic_buffer_la_LIBADD = ../libdynamic_buffer.la
 test_dynamic_buffer_la_CFLAGS = $(AM_CFLAGS)
+
+test_registers_la_SOURCES = test_registers.cc mock_dcpd_dbus.hh mock_dcpd_dbus.cc mock_expectation.hh
+test_registers_la_LIBADD = ../libregisters.la
+test_registers_la_CFLAGS = $(AM_CFLAGS) $(DCPD_DEPENDENCIES_CFLAGS)
+test_registers_la_CXXFLAGS = $(CXXRELAXEDWARNINGS) $(DCPD_DEPENDENCIES_CFLAGS)
 
 CLEANFILES = test_report.xml test_report_junit.xml valgrind.xml
 
