--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -18,7 +18,7 @@ AM_CXXFLAGS = $(CXXWARNINGS)
 
 LIBS += $(CPPCUTTER_LIBS)
 
-check_LTLIBRARIES = test_dynamic_buffer.la test_registers.la
+check_LTLIBRARIES = test_dynamic_buffer.la test_registers.la test_drcpdcomm.la
 
 test_dynamic_buffer_la_SOURCES = test_dynamic_buffer.c
 test_dynamic_buffer_la_LIBADD = ../libdynamic_buffer.la
@@ -33,6 +33,15 @@ test_registers_la_SOURCES = \
 test_registers_la_LIBADD = ../libregisters.la ../libdynamic_buffer.la
 test_registers_la_CFLAGS = $(AM_CFLAGS) $(DCPD_DEPENDENCIES_CFLAGS)
 test_registers_la_CXXFLAGS = $(CXXRELAXEDWARNINGS) $(DCPD_DEPENDENCIES_CFLAGS)
+
+test_drcpdcomm_la_SOURCES = \
+    test_drcp_communication.cc \
+    mock_named_pipe.hh mock_named_pipe.cc \
+    mock_messages.hh mock_messages.cc \
+    mock_expectation.hh
+test_drcpdcomm_la_LIBADD = ../libdrcpdcomm.la ../libdynamic_buffer.la
+test_drcpdcomm_la_CFLAGS = $(AM_CFLAGS)
+test_drcpdcomm_la_CXXFLAGS = $(AM_CXXFLAGS)
 
 CLEANFILES = test_report.xml test_report_junit.xml valgrind.xml
 
