--- a/Makefile.am
+++ b/Makefile.am
@@ -12,7 +12,7 @@ CLEANFILES = README.html
 
 dcpd_SOURCES = \
     dcpd.c registers.h named_pipe.c named_pipe.h \
-    transactions.c transactions.h dcpdefs.h messages.c messages.h \
+    transactions.h dcpdefs.h messages.c messages.h \
     dynamic_buffer.h drcp.h drcp_command_codes.h dcpregs_drcp.h \
     dbus_iface.c dbus_iface.h dbus_iface_deep.h
 
@@ -20,7 +20,7 @@ AM_CFLAGS = $(CWARNINGS)
 
 AM_CPPFLAGS = $(DCPD_DEPENDENCIES_CFLAGS)
 
-noinst_LTLIBRARIES = libdynamic_buffer.la libregisters.la libdcpd_dbus.la libdrcpdcomm.la
+noinst_LTLIBRARIES = libtransactions.la libdynamic_buffer.la libregisters.la libdcpd_dbus.la libdrcpdcomm.la
 
 dcpd_LDADD = $(noinst_LTLIBRARIES) $(DCPD_DEPENDENCIES_LIBS)
 
@@ -39,6 +39,11 @@ libdcpd_dbus_la_CFLAGS = $(CRELAXEDWARNINGS)
 
 libdrcpdcomm_la_SOURCES = drcp.c drcp.h named_pipe.h dynamic_buffer.h messages.h
 libdrcpdcomm_la_CFLAGS = $(AM_CFLAGS)
+
+libtransactions_la_SOURCES = \
+    transactions.c transactions.h\
+    dynamic_buffer.h registers.h named_pipe.h dcpdefs.h messages.h
+libtransactions_la_CFLAGS = $(AM_CFLAGS)
 
 EXTRA_DIST += dbus_interfaces/extract_documentation.py dbus_interfaces/de_tahifi_dcpd.xml
 
