Add TCP/IP connection to dcpd.
It is now possible to use a TCP/IP connection in addition to the SPI
connection. The DCP implementation is exactly the same as over SPI,
meaning that sending DCP data over TCP/IP should have the same effect
as sending that data over SPI.

DCPD uses port 8465 for incoming connections (currently hard-coded
into the networking code).

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,6 +12,7 @@ CLEANFILES = README.html
 
 dcpd_SOURCES = \
     dcpd.c os.c os.h registers.h named_pipe.c named_pipe.h \
+    network.c network.h \
     transactions.h dcpdefs.h messages.c messages.h \
     dynamic_buffer.h drcp.h drcp_command_codes.h dcpregs_drcp.h \
     dbus_iface.c dbus_iface.h dbus_iface_deep.h
