Add script for sending DRCP commands over TCP/IP.
Uses netcat for TCP/IP communication; printf, echo, and  xxd for
generating the binary command; and hexdump for showing the answer.

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,6 +7,7 @@ bin_PROGRAMS = dcpd
 html_DATA = README.html
 
 EXTRA_DIST = README.md cppcheck_suppressed.txt
+EXTRA_DIST += send_drcp_command.sh
 
 CLEANFILES = README.html
 
