Fix generation of D-Bus service activation files.
See also 1a0ffca and a8f0a05 in Listbrokers repository.

Change-Id: I3acbc4d3d007943063761abd1692a46539b3dc5b

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = . tests
+SUBDIRS = . dist tests
 
 ACLOCAL_AMFLAGS = -I m4
 
@@ -8,9 +8,6 @@ html_DATA = README.html
 
 EXTRA_DIST = README.md cppcheck_suppressed.txt
 EXTRA_DIST += send_drcp_command.sh
-
-dbusservicedir = $(datadir)/dbus-1/services
-dbusservice_DATA = dist/de.tahifi.Dcpd.service
 
 CLEANFILES = README.html
 
