--- a/configure.ac
+++ b/configure.ac
@@ -101,9 +101,8 @@ AM_CONDITIONAL([WITH_CUTTER], [test "x$ac_cv_use_cutter" = "xyes"])
 AM_CONDITIONAL([WITH_VALGRIND], [test "x$enable_valgrind" = "xyes"])
 AM_CONDITIONAL([CAN_BUILD_DEBIAN_PACKAGE], [test "x$ac_cv_prog_DPKG_BUILDPACKAGE" != x && test "x$DEBIAN_ARCHITECTURE_NAME" != x])
 
-AC_CONFIG_FILES([Makefile tests/Makefile Doxyfile])
+AC_CONFIG_FILES([Makefile tests/Makefile dist/Makefile Doxyfile])
 AC_CONFIG_FILES([debian/control])
-AC_CONFIG_FILES([dist/de.tahifi.Dcpd.service])
 AC_CONFIG_FILES([tests/run_test.sh], [chmod +x tests/run_test.sh])
 AC_CONFIG_FILES([tests/valgrind.sh], [chmod +x tests/valgrind.sh])
 AC_OUTPUT
