Formatting, no functional changes.
Change-Id: Icbb9a5cad3dd63cfd0e8fba6a1e03a16525339ed

--- a/configure.ac
+++ b/configure.ac
@@ -40,8 +40,10 @@ AC_CHECK_PROGS([DPKG_BUILDPACKAGE], [dpkg-buildpackage])
 AC_CHECK_PROGS([DPKG_ARCHITECTURE], [dpkg-architecture])
 AC_CHECK_PROGS([XSLTPROC], [xsltproc])
 AC_CHECK_PROGS([VALGRIND], [valgrind])
+
 m4_ifdef([AC_CHECK_CUTTER],
-[AC_CHECK_CUTTER
+[
+AC_CHECK_CUTTER
 AC_CHECK_CPPCUTTER
 AC_CHECK_GCUTTER
 AC_CHECK_COVERAGE
