INI file parser and generator, first integration.
The code is needed for reading and writing configuration files for
Connman. We are going to need configuration for each interface, where
each interface is identified by MAC address.

Not much implementation yet, just enough to allow two first tests to
pass.

Change-Id: I728100c0cf0ed45728dffea8527541dcc5407ab0

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -36,7 +36,12 @@ AM_CXXFLAGS = $(CXXWARNINGS)
 
 LIBS += $(CPPCUTTER_LIBS)
 
-check_LTLIBRARIES = test_dynamic_buffer.la test_registers.la test_drcpdcomm.la test_transactions.la
+check_LTLIBRARIES = \
+    test_dynamic_buffer.la \
+    test_registers.la \
+    test_drcpdcomm.la \
+    test_transactions.la \
+    test_inifile.la
 
 test_dynamic_buffer_la_SOURCES = test_dynamic_buffer.c
 test_dynamic_buffer_la_LIBADD = $(top_builddir)/src/libdynamic_buffer.la
@@ -70,6 +75,12 @@ test_transactions_la_SOURCES = \
 test_transactions_la_LIBADD = $(top_builddir)/src/libtransactions.la $(top_builddir)/src/libregisters.la $(top_builddir)/src/libdynamic_buffer.la
 test_transactions_la_CFLAGS = $(AM_CFLAGS) $(DCPD_DEPENDENCIES_CFLAGS)
 test_transactions_la_CXXFLAGS = $(AM_CXXFLAGS) $(DCPD_DEPENDENCIES_CFLAGS)
+
+test_inifile_la_SOURCES = \
+    test_inifile.cc
+test_inifile_la_LIBADD = $(top_builddir)/src/libinifile.la
+test_inifile_la_CFLAGS = $(AM_CFLAGS)
+test_inifile_la_CXXFLAGS = $(AM_CXXFLAGS)
 
 CLEANFILES = test_report.xml test_report_junit.xml valgrind.xml
 
