--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -71,14 +71,16 @@ test_transactions_la_SOURCES = \
     test_transactions.cc \
     mock_dcpd_dbus.hh mock_dcpd_dbus.cc \
     mock_os.hh mock_os.cc \
-    mock_messages.hh mock_messages.cc
+    mock_messages.hh mock_messages.cc \
+    mock_expectation.hh
 test_transactions_la_LIBADD = $(top_builddir)/src/libtransactions.la $(top_builddir)/src/libregisters.la $(top_builddir)/src/libdynamic_buffer.la
 test_transactions_la_CFLAGS = $(AM_CFLAGS) $(DCPD_DEPENDENCIES_CFLAGS)
 test_transactions_la_CXXFLAGS = $(AM_CXXFLAGS) $(DCPD_DEPENDENCIES_CFLAGS)
 
 test_inifile_la_SOURCES = \
     test_inifile.cc \
-    mock_messages.hh mock_messages.cc
+    mock_messages.hh mock_messages.cc \
+    mock_expectation.hh
 test_inifile_la_LIBADD = $(top_builddir)/src/libinifile.la
 test_inifile_la_CFLAGS = $(AM_CFLAGS)
 test_inifile_la_CXXFLAGS = $(AM_CXXFLAGS)
