First real query of Connman: get DHCP state.
DCP register 55 is implemented now.

Change-Id: I39c6e7addc6d3d2d7c321fb2adf7f8c5685fa880

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,6 +26,7 @@ dcpd_SOURCES = \
     transactions.h dcpdefs.h messages.c messages.h \
     dynamic_buffer.h drcp.h drcp_command_codes.h \
     dcpregs_drcp.h dcpregs_networking.h \
+    connman.c connman.h \
     dbus_iface.c dbus_iface.h dbus_iface_deep.h
 
 AM_CFLAGS = $(CWARNINGS)
