Add unit tests for reading out DHCP mode over SPI.
Change-Id: Id492d394a273f7b03f8720c76d01a7475bcb98fd

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -51,6 +51,7 @@ test_registers_la_SOURCES = \
     test_registers.cc \
     mock_dcpd_dbus.hh mock_dcpd_dbus.cc \
     mock_dbus_iface.hh mock_dbus_iface.cc \
+    mock_connman.hh mock_connman.cc \
     mock_os.hh mock_os.cc \
     mock_messages.hh mock_messages.cc \
     mock_expectation.hh
