--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 /aclocal.m4
 /autom4te.cache/
-/config
+/config/
 /config.h.in
 /config.h.in~
 /configure
-/m4
+/m4/
+/cscope.out
+/tags
 /*.taghl
 Makefile.in
