Log version information during startup (#57).
Also add --version command line option.

Change-Id: Ib9da8fe863845b9cbede5533f01ecfd1e196ed88

--- a/Makefile.am
+++ b/Makefile.am
@@ -32,6 +32,13 @@ EXTRA_DIST += \
     dbus_interfaces/de_tahifi_dcpd.xml \
     dbus_interfaces/net_connman.xml
 
+BUILT_SOURCES = versioninfo.h
+
+CLEANFILES += $(BUILT_SOURCES)
+
+versioninfo.h: versioninfo.cache
+	(cd $(top_srcdir) && $(AUTOREVISION) -t h -o $(abs_top_builddir)/versioninfo.cache >$(abs_top_builddir)/$@)
+
 .md.html:
 	$(MARKDOWN) $< >$@
 
