Add stubs for registers 40, 41, 44, and 209.
Change-Id: Ic8b84b4fba3463d4f5427bacf949edf04c9e3f61

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -25,7 +25,7 @@ dcpd_SOURCES = \
     network.c network.h \
     transactions.h dcpdefs.h messages.c messages.h \
     dynamic_buffer.h drcp.h drcp_command_codes.h \
-    dcpregs_drcp.h dcpregs_networking.h \
+    dcpregs_drcp.h dcpregs_networking.h dcpregs_filetransfer.h \
     connman.c connman.h \
     dbus_iface.c dbus_iface.h dbus_iface_deep.h dbus_handlers.h
 
@@ -57,6 +57,7 @@ libregisters_la_SOURCES = \
     registers.c registers.h registers_priv.h \
     dcpregs_drcp.c dcpregs_drcp.h \
     dcpregs_networking.c dcpregs_networking.h \
+    dcpregs_filetransfer.c dcpregs_filetransfer.h \
     drcp_command_codes.h messages.h
 libregisters_la_CFLAGS = $(AM_CFLAGS)
 
