--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -758,7 +758,7 @@ WARN_LOGFILE           =
 # spaces.
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = @abs_srcdir@/src @abs_srcdir@/tests @abs_builddir@
+INPUT                  = @abs_srcdir@/src @abs_srcdir@/tests @abs_srcdir@/dbus_interfaces @abs_builddir@
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -793,7 +793,12 @@ RECURSIVE              = YES
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                = @abs_builddir@/src/dcpd_dbus.c @abs_builddir@/src/connman_dbus.c @abs_srcdir@/dbus_interfaces/
+EXCLUDE                = \
+    @abs_builddir@/src/dcpd_dbus.c \
+    @abs_builddir@/src/dbusdl_dbus.c \
+    @abs_builddir@/src/connman_dbus.c \
+    @abs_srcdir@/dbus_interfaces/de_tahifi_lists_errors.hh \
+    @abs_srcdir@/dbus_interfaces/*.xml
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
@@ -1940,7 +1945,7 @@ ENABLE_PREPROCESSING   = YES
 # The default value is: NO.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-MACRO_EXPANSION        = NO
+MACRO_EXPANSION        = YES
 
 # If the EXPAND_ONLY_PREDEF and MACRO_EXPANSION tags are both set to YES then
 # the macro expansion is limited to the macros specified with the PREDEFINED and
@@ -1948,7 +1953,7 @@ MACRO_EXPANSION        = NO
 # The default value is: NO.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-EXPAND_ONLY_PREDEF     = NO
+EXPAND_ONLY_PREDEF     = YES
 
 # If the SEARCH_INCLUDES tag is set to YES, the include files in the
 # INCLUDE_PATH will be searched if a #include is found.
@@ -1980,7 +1985,7 @@ INCLUDE_FILE_PATTERNS  =
 # recursively expanded use the := operator instead of the = operator.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-PREDEFINED             =
+PREDEFINED             = DE_TAHIFI_LISTS_ERRORS_ENUM_NAME:=DBusListsErrorCode DE_TAHIFI_LISTS_ERRORS_ENUM_VALUE(V):="LIST_ERROR_ ## V"
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then this
 # tag can be used to specify a list of macro names that should be expanded. The
