--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -29,6 +29,7 @@ AM_LDFLAGS = -module -rpath $(libdir) -avoid-version -no-undefined
 
 AM_CPPFLAGS = $(CUTTER_CFLAGS)
 AM_CPPFLAGS += -I$(top_srcdir)/src -I$(top_builddir)/src
+AM_CPPFLAGS += -I$(top_srcdir)/dbus_interfaces
 
 AM_CFLAGS = $(CWARNINGS)
 
