Setup FileTransfer D-Bus interfaces for D-Bus DL.
Change-Id: I3f9e37925432ccabbb00086ec0ffac63b535929c

--- a/Makefile.am
+++ b/Makefile.am
@@ -30,6 +30,7 @@ CLEANFILES = README.html
 EXTRA_DIST += \
     dbus_interfaces/extract_documentation.py \
     dbus_interfaces/de_tahifi_dcpd.xml \
+    dbus_interfaces/de_tahifi_filetransfer.xml \
     dbus_interfaces/net_connman.xml
 
 BUILT_SOURCES = versioninfo.h
