--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -50,8 +50,10 @@ test_dynamic_buffer_la_CFLAGS = $(AM_CFLAGS)
 
 test_registers_la_SOURCES = \
     test_registers.cc \
+    ../src/dcpregs_filetransfer_priv.h \
     mock_dcpd_dbus.hh mock_dcpd_dbus.cc \
     mock_dbus_iface.hh mock_dbus_iface.cc \
+    mock_file_transfer_dbus.hh mock_file_transfer_dbus.cc \
     mock_connman.hh mock_connman.cc \
     mock_os.hh mock_os.cc \
     mock_messages.hh mock_messages.cc \
