--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -42,7 +42,8 @@ check_LTLIBRARIES = \
     test_registers.la \
     test_drcpdcomm.la \
     test_transactions.la \
-    test_inifile.la
+    test_inifile.la \
+    test_xmodem.la
 
 test_dynamic_buffer_la_SOURCES = test_dynamic_buffer.c
 test_dynamic_buffer_la_LIBADD = $(top_builddir)/src/libdynamic_buffer.la
@@ -90,6 +91,15 @@ test_inifile_la_SOURCES = \
 test_inifile_la_LIBADD = $(top_builddir)/src/libinifile.la
 test_inifile_la_CFLAGS = $(AM_CFLAGS)
 test_inifile_la_CXXFLAGS = $(AM_CXXFLAGS)
+
+test_xmodem_la_SOURCES = \
+    test_xmodem.cc \
+    ../src/xmodem.h ../src/crc16.h \
+    mock_os.hh mock_os.cc \
+    mock_expectation.hh
+test_xmodem_la_LIBADD = $(top_builddir)/src/libxmodem.la
+test_xmodem_la_CFLAGS = $(AM_CFLAGS)
+test_xmodem_la_CXXFLAGS = $(AM_CXXFLAGS)
 
 CLEANFILES = test_report.xml test_report_junit.xml valgrind.xml
 
